--- a/mystyle.css
+++ b/mystyle.css
@@ -1,15 +1,7 @@
-div.a{background-color:#303030;
-color:white;
-     text-align:center;
-	}
-	 
-#qw{
-	
-}	 
 
 div.b{
 	
-	height:700px;
+	height:640px;
 	background-image:
 	  url("3.png");
 	background-repeat: no-repeat;
@@ -19,14 +11,7 @@ div.b{
 	justify-content:center;
     align-items:center;	
 	position:relative;
-	
-   
 }	
-
-h1.v{
-	font-family:'pacifico',cursive;
-	font-size:60px;
-}
 
 div.overlay{
 	width:100%;
@@ -35,30 +20,86 @@ div.overlay{
 	opacity:0.3;
 	position:absolute;
 }
-	
-.y{
-	
-	
-	background-image:url("2.jpg");
-	 background-size: cover;
-	 text-align:center;
-}	
 
-h.y1{
-	line-height:350px;
+#position0{
+position:absolute;
+top:5px;
+left:0px;
+z-index:1;
 }
 
-.x {
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
+#position{
+position:absolute;
+top:200px;
+left:150px;
+font-family:'pacifico',cursive;
+font-size:60px;
+z-index:1;
 }
 
-div.c{background-color:grey;}	
+#position2{
+position:absolute;
+top:250px;
+left:850px;
+font-family:pacifico;
+font-size:30px;
+z-index:1;
+}
 
-#d{float:left;}
+#position3{
+position:absolute;
+top:50px;
+left:0px;
+z-index:1;
+}
 
-#e{background-color:white;
+#position4{
+position:absolute;
+top:420px;
+left:150px;
+font-family:"times new roman";
+font-size:20px;
+z-index:1;
+}
+
+#size{
+	
+font-size:38px;
+color:yellow;
+font-family:"cooper black";
+}
+
+.img{
+float:right;
+margin-right:35px;
+border-bottom-style:solid;
+border-top-style:solid;
+border-left-style:solid;
+border-right-style:solid;
+}
+.img2{
+float:right;
+margin-right:35px;
+width=80px;
+}
+
+#div4{
+	position:fixed;
+	top: -120px;
+	transition: top 0.5s;
+	z-index:2;
+	
+}
+
+.body{
+	background-image:url("5.png");
+ background-color: #cccccc;
+ background-repeat: no-repeat;
+  background-size:cover;
+  position:relative;
+}
+
+#e{background:white;
 	margin-left:6in;
    border-color:#ccc;
    border-style:outset;
@@ -71,148 +112,56 @@ div.c{background-color:grey;}
    border-color:#ccc;
    border-style:outset;
    border-radius:9px;
-    padding-left: 10px;
-   }
+    padding-left: 15px;
+}  
    
-#t10{
-	border-bottom-style:solid;
-	border-bottom-width:1px;
-}   
-   
-#f{
-	float:right;
-}
 
-input[type=text].i1{
+
+input[type=text]{
 	border: 1px outset grey;
-    border-radius: 4px;
-	padding: 5px 10px;
+    border-radius:20px;
+	padding: 10px 20px;
+	background: #f1f1f1;
 }
-
-input[type=password].i1{
+input[type=password]{
 	border: 1px outset grey;
-    border-radius: 4px;
-	padding: 5px 10px;
+    border-radius: 20px;
+	padding: 10px 20px;
+	background: #f1f1f1;
 }
-
-input[type=submit].i1{
-	width:30%;
+input[type=submit]{
+	width:100%;
 	background-color:green;
 	color:white;
 	border: 1px outset grey;
-    border-radius: 4px;
-	padding: 5px 10px;
+    border-radius: 20px;
+	padding: 10px 20px;
 	 cursor: pointer;
 }
-
 input[type=submit]:hover {
     background-color: #45a049;
 }
 
-
-
-
-input[type=reset].i1{
-	width:30%;
-	background-color:green;
+.button{
+   position:absolute;
+	width:15%;
+	background-color:red;
 	color:white;
 	border: 1px outset grey;
     border-radius: 4px;
-	padding: 5px 10px;
+	padding:  11px 20px;
 	 cursor: pointer;
+	  font-size: 14px;
+	  z-index:1;
 }
-
-input[type=reset].i1:hover {
-    background-color: #45a049;
+.button:hover {
+    background-color: #D80000;
 }
-
-#g{margin-top:0.3in;
-   margin-left:3in;
-   margin-right:3in;
-   padding:0.8in;
-   border-style:solid;
-	
-}
-
-table.h{
-	background-color:grey;
-}
-
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-}
-
-.topnav a.z{
-    float: right;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.box{
-	margin-top:0.4in;
-   margin-left:5in;
-   margin-right:5in;
-   padding:0.3in;
-   border-style:outset;
-}
-
-#p1{
-	background-color:yellow;
-}
-
-.t{
-	border-bottom-style:outset;
-	border-bottom-width:2px;
-    border-top-style:outset;
-	border-top-width:2px;
-    border-left-style:outset;
-	border-left-width:2px;
-	border-right-style:outset;
-	border-right-width:2px;
-	background-color:pink;
-	border-top-color:#ccc;
-	border-bottom-color:#ccc;
-	border-right-color:#ccc;
-	border-left-color:#ccc;
-	border-radius:8px;
-	}
-	
-.t1{
-	border-bottom-style:solid;
-	border-bottom-width:1px;
-}	
 
 .error {
-  width: 92%; 
+  width: 100%; 
   margin: 0px auto; 
-  padding: 10px; 
+  padding: 1px; 
   border: 1px solid #a94442; 
   color: #a94442; 
   background: #f2dede; 
@@ -220,28 +169,48 @@ table.h{
   text-align: left;
 }
 
-.container {
-  position: relative;
-  max-width: 800px;
-  margin: 0 auto;
+.t1{
+	border-bottom-style:solid;
+	border-bottom-width:1px;
 }
 
 
+.article {
 
-.container .content {
-  position: absolute;
-  bottom: 0;
-  background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-  color: #f1f1f1;
-  width: 100%;
-  padding: 20px;
+    padding: 10px;
+   
+    background-color: #f1f1f1;
+    
+	text-color: white ;
+	
 }
 
-td.styl{
-background-color:red;font-size:10pt;}
+.article2{
+	font-family:"calibri";
+	margin-right:250px;
+	margin-left:90px;
+	font-size:18px;
+}
 
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: 	#C0C0C0; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 6px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 14px; /* Increase font size */
+}
 
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
 
 
 
