--- a/mystyle2.css
+++ b/mystyle2.css
@@ -1,150 +1,10 @@
-div.a{background-color:#0066ff;
-color:white;
 
-	}
-	 #402d21
-#qw{
-	
-}	 
-
-div.b{
-	
-	height:700px;
-	background-image:
-	  url("mainimage.png");
-	background-repeat: no-repeat;
-    background-size:cover;
-    color:#fff;
-	display:flex;
-	justify-content:center;
-    align-items:center;	
-	position:relative;
-	
-   
-}	
-
-h1.v{
-	font-family:'pacifico',cursive;
-	font-size:60px;
-}
-
-div.overlay{
-	width:100%;
-	height:100%;
-	background:#000;
-	opacity:0.3;
-	position:absolute;
-}
-	
-.y{
-	
-	
-	background-image:url("2.jpg");
-	 background-size: cover;
-	 text-align:center;
-}	
-
-h.y1{
-	line-height:350px;
-}
-
-.x {
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
-}
-
-div.c{background-color:grey;}	
-
-#d{float:left;}
-
-#e{background:white;
-	margin-left:6in;
-   border-color:#ccc;
-   border-style:outset;
-   border-radius:9px;
-   
-   }
-     
-#h{
-	background: white;
-   border-color:#ccc;
-   border-style:outset;
-   border-radius:9px;
-    padding-left: 10px;
-   }
-   
-#t10{
-	border-bottom-style:solid;
-	border-bottom-width:1px;
-}   
-   
-#f{
-	float:right;
-}
-
-input[type=text].i1{
-	border: 1px outset grey;
-    border-radius: 4px;
-	padding: 5px 10px;
-}
-
-input[type=password].i1{
-	border: 1px outset grey;
-    border-radius: 4px;
-	padding: 5px 10px;
-}
-
-input[type=submit].i1{
-	width:30%;
-	background-color:green;
-	color:white;
-	border: 1px outset grey;
-    border-radius: 4px;
-	padding: 5px 10px;
-	 cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-}
-
-
-
-
-input[type=reset].i1{
-	width:30%;
-	background-color:green;
-	color:white;
-	border: 1px outset grey;
-    border-radius: 4px;
-	padding: 5px 10px;
-	 cursor: pointer;
-}
-
-input[type=reset].i1:hover {
-    background-color: #45a049;
-}
-
-#g{margin-top:0.3in;
-   margin-left:3in;
-   margin-right:3in;
-   padding:0.8in;
-   border-style:solid;
-	
-}
-
-table.h{
-	background-color:grey;
-}
-
-/* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
     overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
+
 .topnav a {
     float: left;
     color: #f2f2f2;
@@ -154,13 +14,13 @@ table.h{
     font-size: 17px;
 }
 
-/* Change the color of links on hover */
+
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
 
-/* Add a color to the active/current link */
+
 .topnav a.active {
     background-color: #4CAF50;
     color: white;
@@ -175,16 +35,51 @@ table.h{
     font-size: 17px;
 }
 
-.box{
-	margin-top:0.4in;
-   margin-left:5in;
-   margin-right:5in;
-   padding:0.3in;
-   border-style:outset;
+body{
+	background-color:#ffffcc;
 }
 
-#p1{
-	background-color:yellow;
+table{
+	background-color:white;
+    border-color:#ccc;
+   border-style:outset;
+   border-radius:9px;
+  
+}
+
+input[type=date]{
+    background: #f1f1f1;
+	border: 1px outset grey;
+    border-radius: 4px;
+	padding: 4px 10px;
+}	
+input[type=text], select{
+	
+	border: 1px outset grey;
+    border-radius: 4px;
+	padding:3px 6px;
+}
+textarea {
+    width: 70%;
+    height: 70px;
+    padding: 6px 10px;
+   
+    border: 1px inset #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+}
+input[type=submit]{
+	width:35%;
+	background-color:green;
+	color:white;
+	border: 1px outset grey;
+    border-radius: 4px;
+	padding: 7px 10px;
+	 cursor: pointer;
+}
+input[type=submit]:hover {
+    background-color: #45a049;
 }
 
 .t{
@@ -207,77 +102,16 @@ table.h{
 .t1{
 	border-bottom-style:solid;
 	border-bottom-width:1px;
-}	
+}
 
 .error {
-  width: 42%; 
+  width: 100%; 
   margin: 0px auto; 
-  padding: 5px; 
+  padding: 1px; 
   border: 1px solid #a94442; 
   color: #a94442; 
   background: #f2dede; 
   border-radius: 5px; 
   text-align: left;
 }
-
-.container {
-  position: relative;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-
-
-.container .content {
-  position: absolute;
-  bottom: 0;
-  background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-  color: #f1f1f1;
-  width: 100%;
-  padding: 20px;
-}
-
-td.styl{
-background-color:red;font-size:10pt;}
-
-.article {
-
-    padding: 10px;
-   
-    background-color: #f1f1f1;
-    
-	text-color: white ;
 	
-}
-
-.article2{
-	font-family:"calibri";
-	margin-right:250px;
-	margin-left:90px;
-	font-size:18px;
-}
-
-#myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: 	#C0C0C0; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 6px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    font-size: 14px; /* Increase font size */
-}
-
-#myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
-}
-
-
-
-
